@@ -1,13 +1,13 @@
 # Created by Jevoom
 #
-# 09-Oct-2014
-#   Fix jeni installer error.
+# 13-Oct-2014
+#   Ensure monitor raises the alarm if the secret key is rejected by another server.
 
 module Jerbil
-  # version set to 1.4.2
-  Version = '1.4.2'
-  # date set to 09-Oct-2014
-  Version_Date = '09-Oct-2014'
-  #ident string set to: jerbil-1.4.2 09-Oct-2014
-  Ident = 'jerbil-1.4.2 09-Oct-2014'
+  # version set to 1.4.3
+  Version = '1.4.3'
+  # date set to 13-Oct-2014
+  Version_Date = '13-Oct-2014'
+  #ident string set to: jerbil-1.4.3 13-Oct-2014
+  Ident = 'jerbil-1.4.3 13-Oct-2014'
 end
