@@ -4,6 +4,10 @@
 
 ==History
 
+[jerbil-1.4.3 13-Oct-2014]
+
+  Ensure monitor raises the alarm if the secret key is rejected by another server.
+
 [jerbil-1.4.2 09-Oct-2014]
 
   Fix jeni installer error.
